primer carrusel materialize

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
+		<h1>Proyecto final</h1>
 		<section class="container carrusel-inicio">
 			<div class="row">
 				<div class="carousel carousel-slider center" data-indicators="true">
