acomodando elementos vista registro

--- a/public/index.html
+++ b/public/index.html
@@ -12,27 +12,27 @@
 	<body>
 		<section class="container carrusel-inicio">
 			<div class="carousel carousel-slider center" data-indicators="true">
-				<div class="carousel-fixed-item center">
-					<a class="btn waves-effect boton grey-text darken-text-2" href="registro.html">Registrarme</a>
-				</div>
-				<div class="carousel-item white white-text" href="#one!">
+				<div class="carousel-item white" href="#one!">
 					<img src="img/icons/icon-people.png" alt="icono">
-					<h5>Paga a tus amigos</h5>
-					<p>Paga a quien quieras, desded donde quieras sin usar efectivo</p>
+					<div class="row">
+						<h5>Paga a tus amigos</h5>
+						<p>Paga a quien quieras, desded donde quieras sin usar efectivo</p>
+					</div>
 				</div>
-				<div class="carousel-item white white-text" href="#two!">
+				<div class="carousel-item white" href="#two!">
 					<img src="img/icons/happy-person.png" alt="icono">
 					<h5>Sin numero de cuenta</h5>
 					<p>Elige a quien pagar desde tu lista de contactos</p>
 				</div>
-				<div class="carousel-item white white-text" href="#three!">
+				<div class="carousel-item white" href="#three!">
 					<img src="img/icons/group-people.png" alt="icono">
 					<h2>Gratis y seguro</h2>
 					<p >La transferencia es inmediata y gratuita de una cuenta a otra</p>
 				</div>
-
 			</div>
-
+			<div class="row">
+				<a class="col offset-s4 s4 btn waves-effect boton grey-text darken-text-2" href="registro.html">Registrarme</a>
+			</div>
 
 		</section>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
