--- a/public/registro.html
+++ b/public/registro.html
@@ -10,21 +10,23 @@
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
-		<img src="img/icons/phone.png" alt="">
-		<form class="col s12">
-			<div class="row">
-				<div class="input-field col s6">
-					<i class="material-icons prefix">phone</i>
-					<input id="icon_telephone" type="tel" class="validate">
-					<label for="icon_telephone">Telephone</label>
+		<section class="container">
+			<img src="img/icons/phone.png" alt="">
+			<form class="col s12">
+				<div class="row">
+					<div class="input-field col s6">
+						<i class="material-icons prefix">phone</i>
+						<input id="icon_telephone" type="tel" required/>
+						<label for="icon_telephone"></label>
+					</div>
+					<div class="col s12">
+						<input type="checkbox" id="test5" />
+						<label for="test5">Acepto los <a href="">Terminos y condiciones</a></label>
+					</div>
 				</div>
-				<p>
-					<input type="checkbox" id="test5" />
-					<label for="test5">Acepto los <a href="">Terminos y condiciones</a></label>
-				</p>
-			</div>
-			<a class="btn waves-effect boton grey-text darken-text-2 boton" href="#">Registrarme</a>
-		</form>
+				<a class="btn waves-effect boton grey-text darken-text-2 boton" href="#">Registrarme</a>
+			</form>
+		</section>
 		<script src="app.js"></script>
 	</body>
 </html>
