--- a/src/assets/registro.html
+++ b/src/assets/registro.html
@@ -11,14 +11,12 @@
 	</head>
 	<body>
 		<section class="container">
-			<img src="img/icons/phone.png" alt="">
+			<img src="img/icons/phone.png" alt="icono">
 			<form id="form" class="col s12">
 				<div class="row">
 					<div class="input-field col s6">
 						<i class="material-icons prefix">phone</i>
 						<input id="iphone" type="tel" required/>
-
-
 						<label for="icon_telephone"></label>
 					</div>
 					<div class="col s12">
