entrega dia miercoles

--- a/public/ingresar-codigo.html
+++ b/public/ingresar-codigo.html
@@ -11,20 +11,20 @@
 	</head>
 	<body>
 		<section class="container">
-			<img src="img/icons/message.png" alt="icono">
-			<form id="form" class="col s12">
-				<div class="row">
-					<div class="input-field col s6">
-						<h3>Ahora ingresa tu codigo</h3>
-						<p>Enviamos un sms con el código de validación al número: <span id="telephoNumber"></span></p>
+			<div class="row">
+				<img src="img/icons/message.png" alt="icono">
+				<form class="col s12">
+					<div class="row">
+						<div class="input-field col s6">
+							<h5>Ahora ingresa tu codigo</h5>
+							<p>Enviamos un sms con el código de validación al número: <span id="telephoNumber"></span></p>
+							<i class="material-icons prefix">mode_edit</i>
+							<textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+							<label for="icon_prefix2"></label>
+						</div>
 					</div>
-					<div class="col s12">
-						<input type="checkbox" id="check" />
-						<label for="test5">Acepto los <a href="">Terminos y condiciones</a></label>
-					</div>
-				</div>
-				<button id="enviar"  type="submit" class="boton grey-text darken-text-2 boton col s10">Registrarme</button>
-			</form>
+				</form>
+			</div>
 		</section>
 		<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
