--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,14 @@
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
-		<section class="container carrusel-inicio">
+		<section class="container">
 			<div class="carousel carousel-slider center" data-indicators="true">
 				<div class="carousel-item white" href="#one!">
 					<img src="img/icons/icon-people.png" alt="icono">
-					<div class="row">
-						<h5>Paga a tus amigos</h5>
-						<p>Paga a quien quieras, desded donde quieras sin usar efectivo</p>
-					</div>
+					<h5>Paga a tus amigos</h5>
+					<p>Paga a quien quieras, desded donde quieras sin usar efectivo</p>
 				</div>
-				<div class="carousel-item white" href="#two!">
+				<div class="carousel-item white row" href="#two!">
 					<img src="img/icons/happy-person.png" alt="icono">
 					<h5>Sin numero de cuenta</h5>
 					<p>Elige a quien pagar desde tu lista de contactos</p>
@@ -30,11 +28,11 @@
 					<p >La transferencia es inmediata y gratuita de una cuenta a otra</p>
 				</div>
 			</div>
-			<div class="row">
-				<a class="col offset-s4 s4 btn waves-effect boton grey-text darken-text-2" href="registro.html">Registrarme</a>
+			<div class="row boton-slide">
+				<button class="col offset-s4 s4 waves-effect boton grey-text darken-text-2" href="registro.html">Registrarme</button>
 			</div>
-
 		</section>
+
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 		<script src="app.js"></script>
