--- a/public/ingresar-codigo.html
+++ b/public/ingresar-codigo.html
@@ -28,6 +28,6 @@
 		</section>
 		<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-		<script src="app.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
