--- a/src/assets/registro.html
+++ b/src/assets/registro.html
@@ -7,28 +7,34 @@
 		<title>Yape</title>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<section class="container">
-			<img src="img/icons/phone.png" alt="icono">
+			<div class="row">
+				<div class="col offset-s3">
+					<img class="responsive-img " src="img/icons/phone.png" alt="icono">
+				</div>
+			</div>
 			<form id="form" class="col s12">
 				<div class="row">
-					<div class="input-field col s6">
+					<div class="input-field col offset-s3 s7 m5">
 						<i class="material-icons prefix">phone</i>
 						<input id="phone" type="tel" required/>
 						<label for="icon_telephone"></label>
 					</div>
-					<div class="col s12">
+					<div class="col offset-s4 s10">
 						<input type="checkbox" id="check" />
-						<label for="check">Acepto los <a href="">Terminos y condiciones</a></label>
+						<label for="check"><small>Acepto los <a href="">Terminos y condiciones</a></small></label>
 					</div>
 				</div>
-				<button id="enviar"  type="submit" class="boton grey-text darken-text-2 boton col s10">Registrarme</button>
+				<div class="row">
+					<button id="enviar"  type="submit" class="col offset-s4 offset-m3 s5 boton grey-text darken-text-2 boton">Registrarme</button>
+				</div>
 			</form>
 		</section>
-		<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-		<script src="main.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
