--- a/public/ingresar-codigo.html
+++ b/public/ingresar-codigo.html
@@ -16,8 +16,11 @@
 				<form class="col s12">
 					<div class="row">
 						<div class="input-field col offset-s3 s6">
-							<h5>Ahora ingresa tu codigo</h5>
-							<p>Enviamos un sms con el código de validación al número: <span id="telephoNumber"></span></p>
+							<div class="row">
+								<h5 class="col offset-s3">Ahora ingresa tu códgio</h5>
+								<p>Enviamos un sms con el código de validación al número: <span id="telephoNumber"></span></p>
+							</div>
+							
 							<textarea id="icon_prefix2" class="materialize-textarea"></textarea>
 							<label for="icon_prefix2"></label>
 						</div>
