--- a/public/crear-usuario.html
+++ b/public/crear-usuario.html
@@ -11,20 +11,26 @@
 	</head>
 	<body>
 		<section class="container">
-			<img src="img/icons/message.png" alt="icono">
+			<div class="row">
+				<div class="col offset-s3">
+					<img class="responsive-img " src="img/icons/phone.png" alt="icono">
+				</div>
+			</div>
 			<form id="form" class="col s12">
 				<div class="row">
-					<div class="input-field col s6">
-						<h3>Crea tu usuario Yape</h3>
-						<p>Ingresa un nombre, email y nombre de usuario</p>
-						<i class="material-icons prefix"></i>
-						<input id="phone" type="text" required/>
+					<div class="input-field col offset-s3 s7 m5">
+						<i class="material-icons prefix">phone</i>
+						<input id="phone" type="tel" required/>
 						<label for="icon_telephone"></label>
 					</div>
+					<div class="col offset-s4 s10">
+						<input type="checkbox" id="check" />
+						<label for="check"><small>Acepto los <a href="">Terminos y condiciones</a></small></label>
+					</div>
 				</div>
-				<button id="enviar"  type="submit" class="boton grey-text darken-text-2 boton col s10">Registrarme</button>
-			</form>
-		</section>
+				<div class="row">
+					<button id="enviar"  type="submit" class="col offset-s4 offset-m3 s5 boton grey-text darken-text-2 boton" disabled>Registrarme</button>
+				</div>
 		<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 		<script src="app.js"></script>
