--- a/src/assets/registro.html
+++ b/src/assets/registro.html
@@ -10,15 +10,15 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
-		<section class="container ingresa-codigo">
+		<section class="container registro">
 			<div class="row">
-				<div class="col offset-s3">
+				<div class="col offset-s3 center">
 					<img class="responsive-img " src="img/icons/phone.png" alt="icono">
 				</div>
 			</div>
 			<form id="form" class="col s12">
 				<div class="row">
-					<h5 class="col offset-s3">Para comenzar validemos tu número</h5>
+					<h5 class="col offset-s3 titulo">Para comenzar validemos tu número</h5>
 					<p class="col offset-s3">Recibiras un sms con un código de validación</p>
 				</div>
 				<div class="row">
