--- a/src/assets/registro.html
+++ b/src/assets/registro.html
@@ -40,5 +40,6 @@
 		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/registro.js"></script>
 	</body>
 </html>
