--- a/public/ingresar-codigo.html
+++ b/public/ingresar-codigo.html
@@ -10,19 +10,21 @@
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
-		<section class="container">
+		<section class="container contenedor-codigo">
 			<div class="row">
-				<img src="img/icons/message.png" alt="icono">
+				<img class="responsive-img __icono" src="img/icons/message.png" alt="icono">
 				<form class="col s12">
 					<div class="row">
 						<div class="input-field col offset-s3 s6">
 							<div class="row">
-								<h5 class="col offset-s3">Ahora ingresa tu códgio</h5>
+								<h5 class="col offset-s3 __titulo">Ahora ingresa tu código</h5>
 								<p>Enviamos un sms con el código de validación al número: <span id="telephoNumber"></span></p>
 							</div>
-							
-							<textarea id="icon_prefix2" class="materialize-textarea"></textarea>
-							<label for="icon_prefix2"></label>
+							<div class="input-field col offset-s3 s7 m5">
+								<i class="material-icons prefix">phone</i>
+								<input id="phone" type="tel" required/>
+								<label for="icon_chan"></label>
+							</div>
 						</div>
 					</div>
 				</form>
