--- a/src/assets/registro.html
+++ b/src/assets/registro.html
@@ -21,21 +21,17 @@
 					<h6 class="center __titulo"><strong>Para comenzar validemos tu <br> número</strong></h6>
 					<p class="center">Recibiras un sms con un código de validación</p>
 				</div>
-				<div class="row">
-					<div class="col offset-s3 s6 input-field">
+				<div class="row center">
+					<div class="col offset-s1 s10 input-field">
 						<i class="center material-icons prefix">phone_android</i>
 						<input id="phone" type="tel" required/>
 						<label for="phone"></label>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col offset-s4 s6">
 						<input type="checkbox" id="check" />
 						<label for="check"><small>Acepto los <a href="">Terminos y condiciones</a></small></label>
 					</div>
 				</div>
 				<div class="row">
-					<button id="enviar"  type="submit" class="col offset-s4 offset-m3 s6 boton grey-text darken-text-2 boton" disabled>Registrarme</button>
+					<button id="enviar"  type="submit" class="col offset-s3 s6 boton grey-text darken-text-2 boton" disabled>Registrarme</button>
 				</div>
 			</form>
 		</section>
