--- a/src/assets/registro.html
+++ b/src/assets/registro.html
@@ -26,12 +26,17 @@
 						<i class="center material-icons prefix">phone_android</i>
 						<input id="phone" type="tel" required/>
 						<label for="phone"></label>
+					</div>
+				</div>
+				<div class="row center">
+					<div class="col offset-s1 s10">
 						<input type="checkbox" id="check" />
 						<label for="check"><small>Acepto los <a href="">Terminos y condiciones</a></small></label>
 					</div>
 				</div>
+
 				<div class="row">
-					<button id="enviar"  type="submit" class="col offset-s3 s6 boton grey-text darken-text-2 boton" disabled>Registrarme</button>
+					<button id="enviar" type="button" class="col offset-s3 s6 boton grey-text darken-text-2 boton" disabled>Registrarme</button>
 				</div>
 			</form>
 		</section>
