--- a/src/assets/crear-usuario.html
+++ b/src/assets/crear-usuario.html
@@ -54,6 +54,6 @@
 		</section>
 			<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-			<script src="app.js"></script>
+			<script src="../js/"></script>
 			</body>
 		</html>
