--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -29,7 +29,7 @@
 				</div>
 			</div>
 			<div class="row boton-slide">
-				<a class="col offset-s4 s4 waves-effect boton grey-text darken-text-2 text-center" href="registro.html">Registrarme</a>
+				<a class="center col offset-s4 s4 waves-effect boton grey-text darken-text-2 text-center" href="registro.html">Registrarme</a>
 			</div>
 		</section>
 
